--- a/angular.json
+++ b/angular.json
@@ -74,12 +74,42 @@
               "i18nLocale": "fr",
               "i18nMissingTranslation": "error"
             },
+            "production-zh-Hans": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "outputPath": "dist/my-project-zh-Hans/",
+              "i18nFile": "src/locale/messages.zh-Hans.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "zh-Hans",
+              "i18nMissingTranslation": "error"
+            },
             "fr": {
               "aot": true,
               "outputPath": "dist/my-project-fr/",
               "i18nFile": "src/locale/messages.fr.xlf",
               "i18nFormat": "xlf",
               "i18nLocale": "fr",
+              "i18nMissingTranslation": "error"
+            },
+            "zh-Hans": {
+              "aot": true,
+              "outputPath": "dist/my-project-zh-Hans/",
+              "i18nFile": "src/locale/messages.zh-Hans.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "zh-Hans",
               "i18nMissingTranslation": "error"
             }
           }
@@ -95,6 +125,9 @@
             },
             "fr": {
               "browserTarget": "angular.io-example:build:fr"
+            },
+            "zh-Hans": {
+              "browserTarget": "angular.io-example:build:zh-Hans"
             }
           }
         },
